--- a/index.html
+++ b/index.html
@@ -14,7 +14,10 @@
 
 <div class="buttons-container">
   <button id="startButton" type="button" name="button">Start</button>
-  <button id="stopButton" type="button" name="button">Stop</button>
+  <button id="resumeButton" type="button" name="button">Resume</button>
+  <button id="pauseButton" type="button" name="button">Pause</button>
+  <button id="resetButton" type="button" name="button">Reset</button>
+
 </div>
 
 <div id="timeRemaining" class="time-remaining">
