--- a/index.html
+++ b/index.html
@@ -12,10 +12,17 @@
   Pomodoro Timer
 </div>
 
+<div class="minutes">
+  Enter the amount of minutes:
+  <input id="minutes"type="text" name="name" value="">
+  <button id="submitButton" type="button" name="button">Submit</button>
+</div>
+
+
 <div class="buttons-container">
   <button id="startButton" type="button" name="button">Start</button>
-  <button id="resumeButton" type="button" name="button">Resume</button>
   <button id="pauseButton" type="button" name="button">Pause</button>
+  <button id="resumeButton" type="button" name="button">Resume</button>
   <button id="resetButton" type="button" name="button">Reset</button>
 
 </div>
@@ -23,6 +30,7 @@
 <div id="timeRemaining" class="time-remaining">
   25:00
 </div>
+
 
     <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.0/jquery.min.js"></script>
 
